--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiobotocore==2.4.2
+aiobotocore
 aiohttp==3.8.4
 aioitertools==0.11.0
 aiosignal==1.3.1
@@ -6,8 +6,8 @@ async-timeout==4.0.2
 asynctest==0.13.0
 attrs==22.2.0
 beautifulsoup4==4.11.1
-boto3==1.26.2
-botocore==1.29.106
+boto3
+botocore
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
