--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiobotocore
-aiohttp==3.8.4
+aiohttp==3.9.0
 aioitertools==0.11.0
 aiosignal==1.3.1
 async-timeout==4.0.2
@@ -9,7 +9,7 @@ beautifulsoup4==4.11.1
 boto3
 botocore
 cachetools==5.2.0
-certifi==2022.9.24
+certifi==2023.7.22
 charset-normalizer==2.1.1
 colorama==0.4.4
 decorator==5.1.1
@@ -29,25 +29,25 @@ google-cloud-storage==2.5.0
 google-crc32c==1.5.0
 google-resumable-media==2.4.0
 googleapis-common-protos==1.56.4
-grpcio==1.50.0
+grpcio>=1.53.0
 grpcio-status==1.50.0
 idna==3.4
 jmespath==1.0.1
 multidict==6.0.4
-numpy==1.21.6
+numpy>=1.22
 oauthlib==3.2.2
 packaging==21.3
 pandas==1.3.5
 proto-plus==1.22.1
 protobuf==4.21.9
-pyarrow==10.0.0
+pyarrow==14.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.6
 PyYAML==5.4.1
-requests==2.28.1
+requests>=2.31.0
 requests-oauthlib==1.3.1
 rsa==4.7.2
 s3fs==2023.1.0
@@ -55,6 +55,6 @@ s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
 typing_extensions==4.5.0
-urllib3==1.26.12
+urllib3>=1.26.18
 wrapt==1.15.0
 yarl==1.8.2
