--- a/athena_glue_service_logs/athena-glue-service-logs-master/requirements.txt
+++ b/athena_glue_service_logs/athena-glue-service-logs-master/requirements.txt
@@ -8,13 +8,12 @@ jmespath==0.9.4
 more-itertools==7.2.0
 packaging==19.1
 pluggy==0.13.0
-py==1.10.0
 pyparsing==2.4.2
-pytest==5.1.2
+pytest>=7.2.0
 pytest-mock==1.10.4
 python-dateutil==2.8.0
 s3transfer==0.2.1
 six==1.12.0
-urllib3==1.26.5
+urllib3>=1.26.18
 wcwidth==0.1.7
 zipp==0.6.0
