--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiobotocore
-aiohttp==3.9.4
+aiohttp==3.10.2
 aioitertools==0.11.0
 aiosignal==1.3.1
 async-timeout==4.0.2
@@ -9,7 +9,7 @@ beautifulsoup4==4.11.1
 boto3
 botocore
 cachetools==5.2.0
-certifi==2023.7.22
+certifi==2024.07.04
 charset-normalizer==2.1.1
 colorama==0.4.4
 decorator==5.1.1
@@ -28,6 +28,9 @@ google-cloud-core==2.3.2
 google-cloud-storage==2.5.0
 google-crc32c==1.5.0
 google-resumable-media==2.4.0
+google-api-python-client
+google-cloud-bigquery
+google-cloud-bigquery-storage
 googleapis-common-protos==1.56.4
 grpcio>=1.53.0
 grpcio-status==1.50.0
